2011-10-06  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/Makefile.am, doc/makefile.win32:
   Add doc/makefile.win32 for docs generation.
 * scintilla/Makefile.am, src/Makefile.am, 
   tagmanager/mio/Makefile.am, tagmanager/Makefile.am, Makefile.am:
   Fix missing tagmanager/mio/makefile.win32 in EXTRA_DIST.
   Include makefile.win32 in EXTRA_DIST recursively, not at top-level.


2011-10-06  Colomban Wendling  <colomban(at)geany(dot)org>

 * autogen.sh, configure.ac:
   Modernize configure.ac a bit.
 * configure.ac, m4/geany-revision.m4, m4/geany-binreloc.m4,
   m4/geany-gnu-regex.m4, m4/geany-plugins.m4, m4/geany-i18n.m4,
   m4/geany-mingw.m4, m4/geany-socket.m4, m4/geany-vte.m4,
   m4/geany-utils.m4, m4/geany-status.m4, m4/geany-the-force.m4:
   Extract some configure logic to separate files for better
   readability.


2011-10-05  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/lregex.c, tagmanager/php.c:
   Fix CTags bug 2970274 - when using addCallbackRegex the callback 
   receives less than the number of matches. The number is still not 
   correct (due to POSIX regex compatibility) but at least includes 
   all non-empty matches now.
   http://sourceforge.net/tracker/index.php?func=detail&aid=2970274
   &group_id=6556&atid=106556


2011-10-04  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/js.c:
   Update from CTags SVN jscript.c.


2011-10-03  Colomban Wendling  <colomban(at)geany(dot)org>

 * TODO, configure.ac, doc/geany.txt, geany.nsi, geany_private.rc,
   src/geany.h, win32-config.h, wscript:
   Post-release version bump.
 * src/callbacks.c:
   Fix "toggle case" when there is no selection.


2011-10-03  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * Merge branches/unstable:
 - tagmanager/php.c:
   Fix parsing keyword-qualified functions strictly, e.g. don't 
   parse 'staticfunction' or 'fatfunction'.
 - src/utils.c, src/utils.h, src/editor.c: